[BCP-394] Removed generation timestamp, improved error codes description, removed default error codes from docs

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
 							<generateModelTests>false</generateModelTests>
 							<modelPackage>ca.bc.gov.iamp.email.model</modelPackage>
 							<configOptions>
+								<hideGenerationTimestamp>true</hideGenerationTimestamp>
 								<sourceFolder>src/main/java</sourceFolder>
 								<dateLibrary>java8</dateLibrary>
 								<interfaceOnly>true</interfaceOnly>
