--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
-server.port=8087
-management.server.port=8088
+#server.port=8087
+#management.server.port=8088
 
 email.notificator.from=donotreply@gov.bc.ca
 spring.mail.host=apps.smtp.gov.bc.ca
