--- a/src/test/resources/application-testing.properties
+++ b/src/test/resources/application-testing.properties
@@ -1,4 +1,4 @@
-service.name=email-notificator
+service.name=iamp-email-service
 email.notificator.from=test@test.com
 
 spring.mail.default-encoding=UTF-8
