--- a/src/test/resources/bootstrap.properties
+++ b/src/test/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 ## =========================================================
 ##              Service
 ## =========================================================
-spring.application.name=email-notificator
+spring.application.name=iamp-email-service
 spring.profiles.active=local
 
 
