--- a/pipeline-config.json
+++ b/pipeline-config.json
@@ -66,7 +66,7 @@
                 "env": "test",
                 "cloudProvider": "ocp",
                 "project": "ag-pssg-is-test",
-		"type": "blue-green"
+		"type": "blue-green",
 		"replicas": "2"
             },
 
