--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 	<parent>
 		<groupId>ca.bc.gov.iamp</groupId>
 		<artifactId>spring-boot-api-service</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 
 
 	<groupId>ca.bc.gov.iamp</groupId>
 	<artifactId>iamp-email-service</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>iamp-email-service</name>
 	<description></description>
 
