--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>ca.bc.gov.iamp</groupId>
 	<artifactId>iamp-email-service</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<name>iamp-email-service</name>
 	<description></description>
 
